--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,7 @@ jobs:
         run: |
           git config user.name release-bot
           git config user.email release-bot@example
+          git fetch --unshallow --tags
           yarn release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - uses: mxschmitt/action-tmate@v3
-        if: failure()
