--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,12 +4,12 @@ on:
     branches: ["master"]
 jobs:
   main:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: "lts/*"
           registry-url: https://registry.npmjs.org/
       - id: yarn_cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
