--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "lts/*"
+          cache: yarn
           registry-url: https://registry.npmjs.org/
-      - id: yarn_cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn_cache.outputs.dir }}
-          key: yarn-${{ hashFiles('yarn.lock') }}
-          restore-keys: yarn-
       - run: yarn
       - name: Release
         run: |
