--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "@eslint/json": "^0.13.1",
     "eslint": "^9.31.0",
+    "globals": "^16.3.0",
     "lerna": "^8.0.0"
   },
   "scripts": {
-    "release": "lerna publish from-package"
+    "release": "lerna publish from-package",
+    "lint": "eslint 'packages/**/*.js'"
   }
 }
