--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@eslint/json": "^0.13.1",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
-    "lerna": "^8.0.0"
+    "lerna": "^8.0.0",
+    "prettier": "^3.6.2"
   },
   "scripts": {
     "release": "lerna publish from-package",
