--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@eslint/js": "^9.31.0",
     "@eslint/json": "^0.13.1",
     "eslint": "^9.31.0",
+    "eslint-config-prettier": "^9.1.0",
     "globals": "^16.3.0",
-    "lerna": "^8.0.0",
-    "prettier": "^3.6.2"
+    "lerna": "^8.0.0"
   },
   "scripts": {
     "release": "lerna publish from-package",
