--- a/packages/chirimen/package.json
+++ b/packages/chirimen/package.json
@@ -62,8 +62,8 @@
     "@chirimen/ltr390": "latest",
     "@chirimen/mcp9808": "latest",
     "@chirimen/microbit": "latest",
-    "@chirimen/mcp9808": "latest",
     "@chirimen/mlx90614": "latest",
+    "@chirimen/mma7660": "latest",
     "@chirimen/mpu6050": "latest",
     "@chirimen/mpu6500": "latest",
     "@chirimen/neopixel-i2c": "latest",
