--- a/packages/chirimen/package.json
+++ b/packages/chirimen/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chirimen",
   "description": "A comprehensive collection of CHIRIMEN IoT device drivers and utilities",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -61,7 +61,6 @@
     "@chirimen/ina219": "latest",
     "@chirimen/ltr390": "latest",
     "@chirimen/mcp9808": "latest",
-    "@chirimen/microbit": "latest",
     "@chirimen/mlx90614": "latest",
     "@chirimen/mma7660": "latest",
     "@chirimen/mpu6050": "latest",
@@ -70,6 +69,8 @@
     "@chirimen/pca9685": "latest",
     "@chirimen/pca9685-pwm": "latest",
     "@chirimen/pcf8591": "latest",
+    "@chirimen/qrcodescanner": "latest",
+    "@chirimen/rc522_ws1850s": "latest",
     "@chirimen/s11059": "latest",
     "@chirimen/scd40": "latest",
     "@chirimen/seesaw": "latest",
@@ -82,6 +83,7 @@
     "@chirimen/veml6070": "latest",
     "@chirimen/vl53l0x": "latest",
     "@chirimen/vl53l1x": "latest",
+    "@chirimen/vl6180x": "latest",
     "node-web-gpio": "latest",
     "node-web-i2c": "latest"
   },
